add_subdirectory(simulationBox)
add_subdirectory(engine)
add_subdirectory(utilities)
add_subdirectory(output)
add_subdirectory(setup)
add_subdirectory(config)
add_subdirectory(integrator)
add_subdirectory(potential)
add_subdirectory(timings)
add_subdirectory(thermostat)
add_subdirectory(manostat)
add_subdirectory(physicalData)
add_subdirectory(virial)
add_subdirectory(linearAlgebra)
add_subdirectory(resetKinetics)
add_subdirectory(constraints)
add_subdirectory(readInput)
add_subdirectory(connectivity)
add_subdirectory(forceField)
add_subdirectory(settings)
add_subdirectory(intraNonBonded)