add_subdirectory(simulationBox)
add_subdirectory(engine)
add_subdirectory(utilities)
add_subdirectory(output)
add_subdirectory(setup)
add_subdirectory(integrator)
add_subdirectory(potential)
add_subdirectory(timings)
add_subdirectory(thermostat)
add_subdirectory(manostat)
add_subdirectory(physicalData)
add_subdirectory(virial)
add_subdirectory(linearAlgebra)
add_subdirectory(resetKinetics)
add_subdirectory(constraints)
add_subdirectory(input)
add_subdirectory(connectivity)
add_subdirectory(forceField)
add_subdirectory(settings)
add_subdirectory(intraNonBonded)
add_subdirectory(exceptions)
add_subdirectory(QM)
add_subdirectory(maxwellBoltzmann)
add_subdirectory(box)
add_subdirectory(kernels)
add_subdirectory(opt)

if(BUILD_WITH_PYTHON_BINDINGS)
    add_subdirectory(python)
endif()

if(BUILD_WITH_MPI)
    add_subdirectory(mpi)
endif()